# raft-wal

./: Cargo.toml  README.md  rustfmt.toml  taplo.toml
benches/: wal.rs
src/: batch.rs  codec.rs  config.rs  error.rs  head.rs  iter.rs  lib.rs  metrics.rs  page_block.rs  segment.rs  types.rs
tests/: page_block.rs  wal.rs
